# raffle-b2b-program

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: accounts.ts  admin.ts  connection.ts  get_info.ts  main.ts  models.ts  utils.ts
src/: error.rs  instruction.rs  processor.rs  state.rs
